--- a/app/src/main/res/layout/fragment_detail_portrait.xml
+++ b/app/src/main/res/layout/fragment_detail_portrait.xml
@@ -25,13 +25,13 @@
                 android:layout_height="200sp"
                 android:src="@drawable/avatar_backgrpund" />
 
-            <LinearLayout
+            <RelativeLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_toRightOf="@+id/img_movie"
                 android:layout_centerVertical="true"
-                android:layout_marginLeft="20sp"
-                android:layout_toRightOf="@id/img_movie"
-                android:orientation="vertical">
+                android:layout_marginTop="12sp"
+                android:layout_height="wrap_content"
+                android:padding="12sp">
 
                 <TextView
                     android:id="@+id/program_name"
@@ -45,24 +45,31 @@
                     android:id="@+id/network_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_below="@id/program_name"
                     android:layout_marginBottom="@dimen/text_margin"
                     android:text="Nickelodeon"
                     android:textAppearance="?attr/textAppearanceListItem" />
 
                 <TextView
+                    android:layout_below="@id/network_name"
                     android:id="@+id/ranking_average"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Ranking: 2.3"
                     android:textAppearance="?attr/textAppearanceListItem" />
 
+
                 <Button
                     android:id="@+id/visit_site"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_alignParentEnd="true"
+                    android:layout_alignParentBottom="true"
+                    android:textColor="@android:color/white"
+                    android:backgroundTint="@color/colorPrimary"
                     android:text="Visitar sitio" />
-            </LinearLayout>
 
+            </RelativeLayout>
         </RelativeLayout>
 
         <TextView
@@ -70,7 +77,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="12sp"
             android:text="Sinópsis:"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_size_detail_sub"
             android:textStyle="bold" />
 
         <org.sufficientlysecure.htmltextview.HtmlTextView
@@ -87,7 +94,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="12sp"
             android:text="@string/txv_generos"
-            android:textSize="17sp" />
+            android:textSize="@dimen/text_size_detail_sub"  />
 
         <TextView
             android:id="@+id/txv_horarios"
@@ -95,14 +102,14 @@
             android:layout_height="wrap_content"
             android:layout_margin="12sp"
             android:text="@string/txv_horarios"
-            android:textSize="17sp" />
+            android:textSize="@dimen/text_size_detail_sub"  />
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="12sp"
             android:text="Talentos:"
-            android:textSize="20sp"
+            android:textSize="@dimen/text_size_detail_sub"
             android:textStyle="bold" />
 
         <FrameLayout
