--- a/app/src/main/res/layout/item_cast.xml
+++ b/app/src/main/res/layout/item_cast.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:paddingRight="1sp">
+    android:layout_width="112sp"
+    android:layout_height="wrap_content">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_gravity="center"
         android:background="@android:color/white">
 
         <ImageView
@@ -14,17 +15,18 @@
             android:layout_width="100sp"
             android:layout_height="150sp"
             android:layout_marginRight="5sp"
+            android:layout_gravity="center"
             android:layout_marginLeft="5sp"
             android:src="@drawable/img_placeholder_avatar" />
 
         <TextView
             android:id="@+id/program_name"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_below="@+id/img_cast"
-            android:layout_centerHorizontal="true"
+            android:gravity="center"
+            android:layout_gravity="center|bottom"
             android:text="Los Increibles"
             android:textSize="14sp"
             android:textStyle="bold" />
-    </RelativeLayout>
+    </LinearLayout>
 </FrameLayout>
