--- a/app/src/main/res/layout/fragment_detail_portrait.xml
+++ b/app/src/main/res/layout/fragment_detail_portrait.xml
@@ -8,7 +8,6 @@
     android:orientation="vertical"
     android:paddingBottom="2sp">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -30,8 +29,8 @@
                 android:layout_height="match_parent"
                 android:layout_marginLeft="12sp"
                 android:layout_marginTop="16sp"
-                android:orientation="vertical"
-                android:layout_toRightOf="@+id/img_movie">
+                android:layout_toRightOf="@+id/img_movie"
+                android:orientation="vertical">
 
                 <TextView
                     android:id="@+id/program_name"
@@ -42,11 +41,12 @@
                     android:textStyle="bold" />
 
                 <TextView
-                    android:id="@+id/network_name"
+                    android:id="@+id/original_name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/text_margin"
-                    android:text="Nickelodeon"
+                    android:text="Original"
+                    android:textStyle="italic"
                     android:textAppearance="?attr/textAppearanceListItem" />
 
                 <TextView
@@ -55,19 +55,14 @@
                     android:layout_height="wrap_content"
                     android:text="Ranking: 2.3"
                     android:textAppearance="?attr/textAppearanceListItem" />
-            </LinearLayout>
 
-            <Button
-                android:id="@+id/visit_site"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_alignParentRight="true"
-                android:layout_alignBottom="@+id/img_movie"
-                android:layout_marginRight="18sp"
-                android:layout_marginBottom="18sp"
-                android:backgroundTint="@color/colorPrimary"
-                android:text="Visitar sitio"
-                android:textColor="@android:color/white" />
+                <TextView
+                    android:id="@+id/relase_date"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Fecha de lanzamiento:"
+                    android:textAppearance="?attr/textAppearanceListItem" />
+            </LinearLayout>
         </RelativeLayout>
 
         <TextView
@@ -85,67 +80,5 @@
             android:layout_marginLeft="12sp"
             android:layout_marginRight="12sp"
             android:text="@string/conten_sinopsis" />
-
-        <TextView
-            android:id="@+id/txv_generos"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="12sp"
-            android:text="@string/txv_generos"
-            android:textSize="@dimen/text_size_detail_sub" />
-
-        <TextView
-            android:id="@+id/txv_horarios"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="12sp"
-            android:text="@string/txv_horarios"
-            android:textSize="@dimen/text_size_detail_sub" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="12sp"
-            android:text="Talentos:"
-            android:textSize="@dimen/text_size_detail_sub"
-            android:textStyle="bold" />
-
-        <FrameLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content">
-
-            <TextView
-                android:id="@+id/aviso_without_talentos"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="center"
-                android:layout_margin="12sp"
-                android:text="No se han podido cargar los talentos"
-                android:textSize="30sp"
-                android:visibility="gone" />
-
-            <ProgressBar
-                android:id="@+id/progress_bar_talentos"
-                android:layout_width="60sp"
-                android:layout_height="60sp"
-                android:layout_gravity="center" />
-
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/list_cast"
-                android:name="com.amco.tv.ProgramFragment"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="12sp"
-                android:layout_marginRight="12sp"
-                android:layout_marginBottom="12sp"
-                android:scrollbars="horizontal"
-                app:layoutManager="LinearLayoutManager"
-                tools:context=".view.fragment.ProgramFragment"
-                tools:listitem="@layout/item_cast" />
-
-        </FrameLayout>
-
     </LinearLayout>
-
-
 </ScrollView>
