--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#008577</color>
-    <color name="colorPrimaryDark">#00574B</color>
+    <color name="colorPrimary">#01d277</color>
+    <color name="colorPrimaryDark">#081c24</color>
     <color name="colorAccent">#D81B60</color>
     <color name="colorSplash">#3f3f3f</color>
+    <color name="colorBackground">#081c24</color>
 </resources>
